# ux-components

./: .gitignore  404.html  Cargo.toml  README.md  TODO.md  book.toml  chapter_1.html  index.html  print.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  tests.yml
examples/: main.rs.bak
macro/: CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md
macro/src/: lib.rs
macro/src/application/: add_getters_setters.md  add_getters_setters.rs  mod.rs  run.rs
macro/src/macros/: getters.rs  microservice_main.md  microservice_main.rs  mod.rs  run.rs
src/: 01_overview.md  02_introduction.md  03_firstprograms.md  04_menusandtoolbars.md  05_layoutmanagement.md  06_events.md  07_dialogs.md  08_widgets.md  09_widgetsII.md  10_treeview.md  11_textview.md  12_customwidget.md  lib.rs
src/animation/: animation.rs  animation_controller.rs  curve.rs  mod.rs
src/animation/enums/: animation_behavior.rs  animation_status.rs  mod.rs
src/backend/: mod.rs
src/backend/native/: action.rs  actor.rs  actor_manager.rs  adjustment.rs  app_bar.rs  application.rs  backdrop.rs  banner.rs  box_layout.rs  box_layout_child.rs  button.rs  button_group.rs  card.rs  checkbox.rs  chip.rs  circular_progress.rs  clipboard.rs  combo_box.rs  data_table.rs  date_picker.rs  dialog.rs  divider.rs  drawer.rs  entry.rs  expander.rs  expansion_panel.rs  fab.rs  fade_effect.rs  floating_widget.rs  focus_manager.rs  focusable.rs  formfield.rs  frame.rs  grid.rs  icon.rs  icon_button.rs  icon_theme.rs  image.rs  image_list.rs  item_view.rs  (+40 more)
src/elements/: about_list_tile.rs  action_chip.rs  alert_dialog.rs  align.rs  app_bar.rs  back_button.rs  bottom_app_bar.rs  bottom_navigation_bar.rs  bottom_sheet.rs  button.rs  button_bar.rs  button_style_button.rs  calendar_date_picker.rs  canvas.rs  card.rs  center.rs  checkbox.rs  chip.rs  choice_chip.rs  circle_avatar.rs  circular_progress_indicator.rs  clip_oval.rs  clip_path.rs  close_button.rs  column.rs  container.rs  custom_paint.rs  custom_scroll_view.rs  data_table.rs  date_picker_dialog.rs  divider.rs  drawer.rs  dropdown_button.rs  element.rs  elevated_button.rs  expanded.rs  expansion_panel.rs  filter_chip.rs  fitted_box.rs  flat_button.rs  (+79 more)
src/foundation/: atomic.rs  helper.rs  key.rs  local_key.rs  margins.rs  material_application.rs  material_application_host.rs  mod.rs  signal.rs  target_platform.rs  value_changed.rs  widget.rs  widget_properties.rs
src/foundation/enums/: mod.rs
src/foundation/events/: mod.rs
src/foundation/properties/: button.rs  canvas.rs  checkbox.rs  dropdown.rs  image.rs  label.rs  list.rs  mod.rs  panel.rs  progress.rs  scroll.rs  slider.rs  textedit.rs  window.rs
src/gestures/: drag_end_details.rs  drag_start_behavior.rs  drag_start_details.rs  drag_update_details.rs  gesture_recognizer.rs  mod.rs  pointer_enter_event.rs  pointer_event.rs  pointer_exit_event.rs  velocity.rs
src/material/: about_list_tile.rs  action_chip.rs  alert_dialog.rs  alignment_geometry.rs  app_bar.rs  app_bar_theme.rs  back_button.rs  bottom_app_bar.rs  bottom_app_bar_theme.rs  bottom_navigation_bar.rs  bottom_navigation_bar_landscape_layout.rs  bottom_navigation_bar_theme_data.rs  bottom_navigation_bar_type.rs  bottom_sheet.rs  bottom_sheet_theme_data.rs  button_bar.rs  button_bar_layout_behavior.rs  button_bar_theme_data.rs  button_style.rs  button_style_button.rs  button_text_theme.rs  button_theme_data.rs  calendar_date_picker.rs  card.rs  card_theme.rs  checkbox.rs  checkbox_theme_data.rs  chip.rs  chip_theme_data.rs  choice_chip.rs  circle_avatar.rs  circular_progress_indicator.rs  close_button.rs  color_scheme.rs  consts.rs  data_table.rs  data_table_theme_data.rs  date_picker_dialog.rs  dialog_theme.rs  divider.rs  (+109 more)
src/material/enums/: collapse_mode.rs  material_type.rs  mod.rs  (+1 more)
src/painting/: alignment.rs  asset_bundle_image_key.rs  asset_bundle_image_provider.rs  asset_image.rs  border.rs  border_radius.rs  border_radius_geometry.rs  border_side.rs  box_border.rs  box_decoration.rs  box_shadow.rs  circular_notched_rectangle.rs  decoration.rs  decoration_image.rs  edge_insets.rs  edge_insets_geometry.rs  exact_asset_image.rs  file_image.rs  fractional_offset.rs  gradient.rs  gradient_transform.rs  image_error_listener.rs  image_provider.rs  inline_span.rs  linear_gradient.rs  memory_image.rs  mod.rs  network_image.rs  notched_shape.rs  outlined_border.rs  resize_image.rs  rounded_rectangle_border.rs  shape_border.rs  shape_decoration.rs  stadium_border.rs  text_span.rs  text_style.rs
src/rendering/: box_constraints.rs  cross_axis_alignment.rs  custom_clipper.rs  custom_painter.rs  main_axis_alignment.rs  main_axis_size.rs  mod.rs  render_box.rs  sliver_constraints.rs  sliver_grid_delegate.rs  sliver_grid_delegate_with_fixed_cross_axis_count.rs  sliver_grid_layout.rs
src/rx/: mod.rs  stream_controller.rs
src/services/: asset_bundle.rs  focus.rs  layout_system.rs  mod.rs  mouse_cursor.rs  system_ui_overlay_style.rs  text_editing_value.rs  text_input_type.rs  text_selection.rs
src/theme/: mod.rs  properties.rs  rule.rs  units.rs  values.rs
src/ui/: canvas.rs  codec.rs  color_filter.rs  font_feature.rs  font_weight.rs  image_filter.rs  locale.rs  mask_filter.rs  mod.rs  offset.rs  paint.rs  path.rs  radius.rs  rect.rs  shader.rs  shadow.rs  size.rs  text_position.rs  text_range.rs  void_callback.rs  window_padding.rs
src/widgets/: action.rs  align.rs  build_context.rs  center.rs  clip_oval.rs  clip_path.rs  column.rs  container.rs  custom_paint.rs  custom_scroll_view.rs  expanded.rs  fitted_box.rs  flexible.rs  flow.rs  focus_node.rs  form.rs  generate_app_title.rs  gesture_detector.rs  global_key.rs  grid_view.rs  icon.rs  icon_data.rs  icon_theme_data.rs  image.rs  image_icon.rs  initial_route_list_factory.rs  intent.rs  list_view.rs  locale_list_resolution_callback.rs  locale_resolution_callback.rs  media_query.rs  media_query_data.rs  mod.rs  navigation_toolbar.rs  navigator.rs  navigator_observer.rs  navigator_state.rs  null_widget.rs  offstage.rs  opacity.rs  (+37 more)
(+273 files in other folders)
