[package]
name = "ux-components"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-components"
repository = "https://github.com/angular-rust/ux-components"
documentation = "https://docs.rs/ux-components"
description = "Backend agnostic GUI framework"
keywords = ["wasm", "web", "material-design", "material-components", "gtk"]
categories = ["wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "components"

[dependencies]
log = "0.4"
bitflags = "1.0"
ruex = "0.1"
ux-macro = "0.1"
ux-primitives = "0.1"
ux-dataflow = "0.1"
ux-animate = "0.1"
ux-charts = "0.1"
simplecss = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cairo-rs = "0.9"
atk = "0.9"
glib-sys = "0.10"
gdk-sys = "0.10"
gio-sys = "0.10"
gobject-sys = "0.10"
cairo-sys-rs = "0.10"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
pango = "0.9"
x11 = "2.18"
cogl-rs = "0.1.3"
clutter-rs = "0.1"
# starup notifications
notify-rust = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.2"
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "SvgImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "CanvasWindingRule",
  "Path2d",
  "CanvasPattern",
  "CanvasGradient",
  "HitRegionOptions",
  "ImageData",
  "DomMatrix"
]

[dev-dependencies]
