[package]
name = "ux-components"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-components"
repository = "https://github.com/angular-rust/ux-components"
documentation = "https://docs.rs/ux-components"
description = "Backend agnostic GUI framework"
keywords = ["wasm", "web", "material-design", "material-components", "gtk"]
categories = ["wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "components"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ux-animate/dox", "ux-charts/dox", "ux-dx/dox"]
# , "x11/dox", "gobject-sys/dox", , "pango/dox"

[dependencies]
log = "0.4"
bitflags = "1.0"
ruex = "0.1"
ux-macro = "0.1"
ux-dx = "0.1"
ux-dataflow = "0.1"
ux-animate = "0.1"
ux-charts = "0.1"
once_cell = "1.7.2"
intmap = "0.7.0"
url = "2.2.1"
fontdue = "0.5.0"
# ux-css = "0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# png = "0.16"
# pango = "0.9"
# cairo-rs = { version = "0.9", features = ["png"] }

# starup notifications
notify-rust = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.2"
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "SvgImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "CanvasWindingRule",
  "Path2d",
  "CanvasPattern",
  "CanvasGradient",
  "HitRegionOptions",
  "ImageData",
  "DomMatrix"
]

[dev-dependencies]
